# openenclave

./: CMakeLists.txt
common/: attest_plugin.c
debugger/ptraceLib/: enclave_context.c
debugger/pythonExtension/: gdb_sgx_plugin.py
docs/DesignDocs/: CustomAttestation.md
enclave/core/: CMakeLists.txt  malloc.c
enclave/core/optee/: calls.c  gp.c
enclave/core/sgx/: asmdefs.h  exception.c  td.c  td_basic.c
host/optee/linux/: enclave.c
include/openenclave/attestation/: plugin.h
include/openenclave/corelibc/: stdio.h
include/openenclave/internal/: sgxtypes.h
libc/: syscalls.c
pkgconfig/: CMakeLists.txt
samples/: test-samples.cmake
samples/attested_tls/client/enc/: Makefile  client.cpp
samples/attested_tls/common/: utility.cpp
samples/attested_tls/server/enc/: Makefile  server.cpp
scripts/: install-windows-prereqs.ps1
syscall/: CMakeLists.txt
syscall/devices/hostepoll/: hostepoll.c
syscall/devices/hostfs/: hostfs.c
syscall/devices/hostresolver/: hostresolver.c
syscall/devices/hostsock/: hostsock.c
syscall/enclave/: CMakeLists.txt  consolefs.c  device.c  dirent.c  errno.c  fcntl.c  fdtable.c  ioctl.c  mount.c  musl.c  netdb.c  raise.c  select.c  socket.c  stat.c  stdio.c  stdlib.c  syscall.c  unistd.c
syscall/host/: CMakeLists.txt  tests.c
syscall/host/windows/: syscall.c
syscall/include/openenclave/internal/syscall/: device.h  dirent.h  errno.h  fcntl.h  limits.h  netdb.h  raise.h  resolver.h  stdlib.h  time.h  unistd.h
syscall/include/openenclave/syscall/: log.h
tests/: CMakeLists.txt
tests/attestation_plugin/plugin/: tests.c
tests/ecall/host/: host.cpp
tests/syscall/fs/enc/: enc.cpp
tests/tls_e2e/common/: utility.cpp
(+12 files in other folders)
